<resources>
    <string name="app_name">MyBaking</string>
    <string name="default_recipe_name">Recipe Card</string>

    <string name="main_title">Baking Time</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_step_instruction">Recipe Step Instruction</string>

    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>

    <string name="recipe_ingredients_quantity">quantity: </string>
    <string name="recipe_ingredients_measure">measure: </string>
    <string name="recipe_ingredients_ingredient">ingredient: </string>
    <string name="recipe_ingredients_quantity_default">1</string>
    <string name="recipe_ingredients_measure_default">G</string>
    <string name="recipe_ingredients_ingredient_default">Nutella or other chocolate-hazelnut spread</string>

    <string name="widget_button_previous">Pre</string>

    <string name="error_message">An error has occurred. Please try again.</string>
    <string name="no_video">此步骤无视频</string>

    <string name="show_on_widget">显示在桌面</string>
    <string name="show_on_widget_success">已显示在桌面</string>

</resources>
